HCSVLAB-296: Increase heap and permgen in JAVA_OPTS.